--- a/syle.css
+++ b/syle.css
@@ -1,41 +1,93 @@
-*{
-    
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-.container{
-    max-width: 1280px;
-    margin: auto;
+/* Common Css */
+.container {
+  max-width: 1280px;
+  margin: auto;
 }
-nav{
-    display: flex;
-    justify-content: space-between;
-}
-.search-parent{
-    position: relative;
-    color: #BABABA;
-}
-.search-parent input{
-    background-color: rgb(241, 241, 241);
-    border-radius: 66px;
-    padding: 15px 30px;
-    width: 500px;
-    border: none;
-}
-.search-icon{
-    position: absolute;
-    top: 17px;
-    right: 20px;
+.panda-btn {
+  border-radius: 6px;
 
+  /* Linear */
+  background: linear-gradient(
+    180deg,
+    rgb(255, 88, 155) -0.006%,
+    rgb(255, 19, 111) 99.994%
+  );
+  padding: 15px 35px;
+  border: none;
+  color: white;
+  font-weight: 500;
+}
+/* Nav Bar */
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+}
+.search-parent {
+  position: relative;
+  color: #bababa;
+}
+.search-parent input {
+  background-color: rgb(241, 241, 241);
+  border-radius: 66px;
+  padding: 15px 30px;
+  width: 500px;
+  border: none;
+}
+.search-icon {
+  position: absolute;
+  top: 17px;
+  right: 20px;
 }
 
-.nav-item{
-    display: flex;
-    list-style: none;
-    gap: 24px;
+.nav-item {
+  display: flex;
+  list-style: none;
+  gap: 24px;
 }
-.nav-item li a{
-    text-decoration: none;
-    color: #707070;
-    font-weight: 500;
-    font-size: 16px;
+.nav-item li a {
+  text-decoration: none;
+  color: #707070;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+/* here start the banner */
+.banner {
+  background-color: #feeae9;
+  display: flex;
+  justify-content: space-between;
+  gap: 147px;
+  align-items: center;
+  padding: 25px;
+  border-radius: 10px;
+  margin-top: 45px;
+}
+.banner h2 {
+  color: rgb(31, 31, 31);
+  font-size: 56px;
+  font-weight: 700;
+}
+.banner p {
+  color: #4e4e4e;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  max-width: 400px;
+}
+.banner img {
+  width: 402px;
+  height: 378px;
+}
+.banner-price {
+  color: #ff136f;
+  font-weight: 800;
+  font-size: 52px;
+  display: block;
+  margin-bottom: 15px;
+
 }
