--- a/syle.css
+++ b/syle.css
@@ -89,5 +89,68 @@ nav {
   font-size: 52px;
   display: block;
   margin-bottom: 15px;
+}
 
+/* Categories Section */
+.categories{
+    margin: 64px 0;
+    margin: auto;
+}
+.categories h2 {
+  color: rgb(31, 31, 31);
+  font-family: Poppins;
+  font-size: 36px;
+  font-weight: 600;
+  text-align: left;
+}
+.categories-card-container {
+  display: flex;
+  gap: 26px;
+}
+.card-1 {
+  display: flex;
+  background: linear-gradient(
+    151.85deg,
+    rgb(255, 156, 53) 14.537%,
+    rgb(255, 208, 25) 84.486%
+  );
+  justify-content: space-between;
+  gap: 4px;
+  align-items: center;
+  padding: 20px;
+  border-radius: 12px;
+  flex: 1;
+}
+.card-1 img {
+  width: 68.21px;
+  height: 90px;
+}
+.card-1 h3 {
+  color: rgb(255, 255, 255);
+  font-family: Poppins;
+  font-size: 36px;
+  font-weight: 500;
+}
+.card-2 {
+  /* Linear */
+  background: linear-gradient(
+    180deg,
+    rgb(255, 88, 155) -0.006%,
+    rgb(255, 19, 111) 99.994%
+  );
+}
+.card-2 img {
+  width: 94px;
+  height: 94px;
+}
+.card-3 {
+  background: linear-gradient(
+    170.38deg,
+    rgb(66, 137, 255) 15.416%,
+    rgb(63, 7, 248) 74.29%
+  );
+}
+.card-3 img {
+  width: 152px;
+  height: 97px;
 }
